@@ -1282,8 +1282,9 @@ cs_hodge_matvec(const cs_cdo_connect_t       *connect,
   }
   assert(connect != NULL && quant != NULL); // Sanity checks
 
-#pragma omp parallel if (quant->n_cells > CS_THR_MIN) default(none)        \
-  shared(quant, connect, in_vals, result, pty)
+#pragma omp parallel if (quant->n_cells > CS_THR_MIN) default(none)  \
+  shared(quant, connect, in_vals, result, pty)                       \
+  firstprivate(h_info)
   {
 #if defined(HAVE_OPENMP) /* Determine default number of OpenMP threads */
     int  t_id = omp_get_thread_num();
